--- a/app/views/partials/_question.html.haml
+++ b/app/views/partials/_question.html.haml
@@ -9,6 +9,7 @@
     - r = response_for(@response_set, q, nil, rg)
     - i = response_idx
     = f.semantic_fields_for i, r do |ff|
+      = ff.quiet_input :id if r.id
       = ff.quiet_input :question_id
       = ff.quiet_input :response_group, :value => rg if g && g.display_type == "repeater"
       = ff.input :answer_id, :as => :select, :collection => q.answers.map{|a| [a.text, a.id]}, :label => false
