--- a/app/views/results/show.html.haml
+++ b/app/views/results/show.html.haml
@@ -1,16 +1,22 @@
-%table.list_table
-  %tr
-    %th ID
-    %th Code
-    - @questions.each do |question|
-      - next if question.display_order == 1
-      %th= "[" +question.display_order.to_s + "]" + question.text
-  - @response_sets.each do |r_set|
+%table#results_list.display
+  %thead
     %tr
-      %td= h r_set.id
-      %td= h r_set.access_code
+      %th ID
+      %th Code
       - @questions.each do |question|
         - next if question.display_order == 1
-        %td!= display_response(r_set,question)
+        %th= "[" +question.display_order.to_s + "]" + question.text
+  %tbody
+    - @response_sets.each do |r_set|
+      %tr.gradeA
+        %td= h r_set.id
+        %td= h r_set.access_code
+        - @questions.each do |question|
+          - next if question.display_order == 1
+          %td!= display_response(r_set,question)
 %br/
 = link_to "Back", results_path
+:javascript
+  $(document).ready(function(){
+    $('#results_list').dataTable();
+  });
