--- a/app/views/partials/_answer.html.haml
+++ b/app/views/partials/_answer.html.haml
@@ -1,9 +1,10 @@
 -# TODO: disabled
 - rg ||= nil
+- part_of_grid ||= false
 - r = response_for(@response_set, q, a, rg)
 - i = response_idx(q.pick != "one") # argument will be false (don't increment i) if we're on radio buttons
 = f.semantic_fields_for i, r do |ff|
-  = ff.quiet_input :question_id unless q.pick == "one" # don't repeat question_id if we're on radio buttons
+  = ff.quiet_input :question_id unless q.pick == "one" && !part_of_grid # don't repeat question_id if we're on radio buttons
   = ff.quiet_input :id unless q.pick == "one" or r.new_record?
   = ff.quiet_input :response_group, :value => rg if q.pick != "one" && g && g.display_type == "repeater"
   - case q.pick
