--- a/app/views/partials/_question_group.html.haml
+++ b/app/views/partials/_question_group.html.haml
@@ -6,7 +6,7 @@
       %li
         %table
           %col.pre
-          - qs.first.answers.each do |a| 
+          - qs.first.answers.each do |a|
             %col{:class => cycle("odd", "even")}
           %col.post
           %tbody
@@ -21,7 +21,7 @@
                   %th= q.split_text(:pre)
                   - response_idx if q.pick == "one" # increment the response index since the answer partial skips for q.pick == one
                   - q.answers.each do |a|
-                    %td= render a.custom_renderer || '/partials/answer', :g => g, :q => q, :a => a, :f => f
+                    %td= render a.custom_renderer || '/partials/answer', :g => g, :q => q, :a => a, :f => f, :part_of_grid => true
                   %th= q.split_text(:post)
     - when :repeater
       - (@response_set.count_group_responses(qs) + 1).times do |rg|
